syntax = "proto3";

package exchange_rate.v1;

import "google/api/annotations.proto";

option go_package = "middle_platform/api/exchange_rate/v1;v1";
option java_multiple_files = true;
option java_package = "dev.kratos.api.exchange_rate.v1";
option java_outer_classname = "ExchangeRateProtoV1";

// The rate service definition.
service ExchangeRate {
  // get Supported Currencies
  rpc SupportedCurrencies (rateRequest) returns (rateReply) {
    option (google.api.http) = {
      get: "/supported-currencies"
    };
  }
}

message rateRequest {
  // string name = 1;
}

message rateReply {
  repeated string currencies = 1;
}
